--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 		<main class="page">
 			<section class="top">
-				<div class="top__image">
+				<div class="top__image ibg">
 					<img src="img/bg_main.jpg" alt="">
 				</div>
 			</section>
