--- a/index.html
+++ b/index.html
@@ -36,6 +36,25 @@
 					<img src="img/bg_main.jpg" alt="">
 				</div>
 			</section>
+
+			<section class="generation">
+				<div class="generation__body">
+					<div class="generation__icon icon">
+						<img src="img/icons/title/01.png" alt="icon">
+					</div>
+					<h2 class="generation__title title">
+						a new generation of vintage bike
+					</h2>
+					<div class="generation__text">
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+						industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+						and
+						scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+						leap
+						into electronic typesetting, remaining essentially unchanged.
+					</div>
+				</div>
+			</section>
 		</main>
 
 		<footer class="footer">
