--- a/index.html
+++ b/index.html
@@ -55,6 +55,80 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="brands">
+				<div class="brands__img brands__img_b">
+					<img src="img/brands/01.jpg" alt="">
+				</div>
+
+				<div class="brands__description">
+					<div class="brands__icon icon">
+						<img src="img/icons/title/02.png" alt="icon">
+					</div>
+					<h2 class="brands__title title">
+						vintage Oliva
+					</h2>
+					<div class="brands__text">
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+						industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+						scrambled it to make a type specimen book. It has survived.
+					</div>
+				</div>
+
+				<div class="brands__img brands__img_s">
+					<img src="img/brands/02.jpg" alt="">
+				</div>
+
+				<div class="brands__description">
+					<div class="brands__icon icon">
+						<img src="img/icons/title/03.png" alt="icon">
+					</div>
+					<h2 class="brands__title title">
+						La Boriosa
+					</h2>
+					<div class="brands__text">
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+						industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+						scrambled it to make a type specimen book. It has survived.
+					</div>
+				</div>
+
+				<div class="brands__img brands__img_s">
+					<img src="img/brands/03.jpg" alt="">
+				</div>
+
+				<div class="brands__img brands__img_b">
+					<img src="img/brands/04.jpg" alt="">
+				</div>
+
+				<div class="brands__img brands__img_m">
+					<img src="img/brands/05.jpg" alt="">
+				</div>
+
+				<div class="brands__description">
+					<div class="brands__icon icon">
+						<img src="img/icons/title/04.png" alt="icon">
+					</div>
+					<h2 class="brands__title title">
+						retrò Bike - M. Hulot
+					</h2>
+					<div class="brands__text">
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+						industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+						scrambled it to make a type specimen book. It has survived.
+					</div>
+				</div>
+
+				<div class="brands__img brands__img_s">
+					<img src="img/brands/06.jpg" alt="">
+				</div>
+
+				<div class="brands__img brands__img_m">
+					<img src="img/brands/07.jpg" alt="">
+				</div>
+
+			</section>
+
 		</main>
 
 		<footer class="footer">
