--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+	<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="css/style.css">
 	<title>Bicycle AOD</title>
 </head>
@@ -57,76 +57,154 @@
 			</section>
 
 			<section class="brands">
-				<div class="brands__img brands__img_b">
-					<img src="img/brands/01.jpg" alt="">
-				</div>
 
-				<div class="brands__description">
-					<div class="brands__icon icon">
-						<img src="img/icons/title/02.png" alt="icon">
+				<div class="brands__row">
+					<a href="" class="brands__item brands__item_b">
+						<span class="brands__logo">
+							<img src="img/logos/01.png" alt="">
+						</span>
+						<div class="brands__img ibg">
+							<img src="img/brands/01.jpg" alt="">
+						</div>
+					</a>
+					<div class="brands__content">
+						<div class="brands__icon icon">
+							<img src="img/icons/title/02.png" alt="icon">
+						</div>
+						<h2 class="brands__title title">
+							vintage Oliva
+						</h2>
+						<div class="brands__text">
+							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+							industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+							and
+							scrambled it to make a type specimen book. It has survived.
+						</div>
 					</div>
-					<h2 class="brands__title title">
-						vintage Oliva
-					</h2>
-					<div class="brands__text">
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-						industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-						scrambled it to make a type specimen book. It has survived.
-					</div>
-				</div>
-
-				<div class="brands__img brands__img_s">
-					<img src="img/brands/02.jpg" alt="">
-				</div>
-
-				<div class="brands__description">
-					<div class="brands__icon icon">
-						<img src="img/icons/title/03.png" alt="icon">
-					</div>
-					<h2 class="brands__title title">
-						La Boriosa
-					</h2>
-					<div class="brands__text">
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-						industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-						scrambled it to make a type specimen book. It has survived.
+					<div class="brands__img ibg">
+						<img src="img/brands/02.jpg" alt="">
 					</div>
 				</div>
 
-				<div class="brands__img brands__img_s">
-					<img src="img/brands/03.jpg" alt="">
-				</div>
-
-				<div class="brands__img brands__img_b">
-					<img src="img/brands/04.jpg" alt="">
-				</div>
-
-				<div class="brands__img brands__img_m">
-					<img src="img/brands/05.jpg" alt="">
-				</div>
-
-				<div class="brands__description">
-					<div class="brands__icon icon">
-						<img src="img/icons/title/04.png" alt="icon">
+				<div class="brands__row">
+					<div class="brands__content">
+						<div class="brands__icon icon">
+							<img src="img/icons/title/03.png" alt="icon">
+						</div>
+						<h2 class="brands__title title">
+							La Boriosa
+						</h2>
+						<div class="brands__text">
+							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+							industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+							and
+							scrambled it to make a type specimen book. It has survived.
+						</div>
 					</div>
-					<h2 class="brands__title title">
-						retrò Bike - M. Hulot
-					</h2>
-					<div class="brands__text">
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-						industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-						scrambled it to make a type specimen book. It has survived.
+					<div class="brands__img ibg">
+						<img src="img/brands/03.jpg" alt="">
 					</div>
+					<a href="" class="brands__item brands__item_b">
+						<span class="brands__logo">
+							<img src="img/logos/02.png" alt="">
+						</span>
+						<div class="brands__img ibg">
+							<img src="img/brands/04.jpg" alt="">
+						</div>
+					</a>
 				</div>
 
-				<div class="brands__img brands__img_s">
-					<img src="img/brands/06.jpg" alt="">
+				<div class="brands__row">
+					<a href="" class="brands__item brands__item_m">
+						<span class="brands__logo">
+							<img src="img/logos/03.png" alt="">
+						</span>
+						<div class="brands__img ibg">
+							<img src="img/brands/05.jpg" alt="">
+						</div>
+					</a>
+					<div class="brands__content">
+						<div class="brands__icon icon">
+							<img src="img/icons/title/04.png" alt="icon">
+						</div>
+						<h2 class="brands__title title">
+							retrò Bike - M. Hulot
+						</h2>
+						<div class="brands__text">
+							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+							industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+							and
+							scrambled it to make a type specimen book. It has survived.
+						</div>
+					</div>
+					<div class="brands__img ibg">
+						<img src="img/brands/06.jpg" alt="">
+					</div>
+					<a href="" class="brands__item brands__item_m">
+						<span class="brands__logo">
+							<img src="img/logos/03.png" alt="">
+						</span>
+						<div class="brands__img ibg">
+							<img src="img/brands/07.jpg" alt="">
+						</div>
+					</a>
 				</div>
 
-				<div class="brands__img brands__img_m">
-					<img src="img/brands/07.jpg" alt="">
-				</div>
+			</section>
 
+			<section class="twitter-slider swiper">
+				<div class="twitter-slider__wrapper swiper-wrapper">
+
+					<div class="twitter-slider__slide swiper-slide">
+						<div class="twitter-slider__container">
+							<div class="twitter-slider__logo">
+								<img src="img/icons/twitter.png" alt="twitter logo">
+							</div>
+							<div class="twitter-slider__title">
+								AOD New York @aod <span class="twitter-slider__title_time">/ 35 min</span>
+							</div>
+							<p class="twitter-slider__text">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac nulla semper rhoncus.
+								Nullam a odio porttitor, dictum turpis vitae, pretium ante amet.
+							</p>
+						</div>
+					</div>
+
+					<div class="twitter-slider__slide swiper-slide">
+						<div class="twitter-slider__container">
+							<div class="twitter-slider__logo">
+								<img src="img/icons/twitter.png" alt="twitter logo">
+							</div>
+							<div class="twitter-slider__title">
+								AOD New York @aod <span class="twitter-slider__title_time">/ 35 min</span>
+							</div>
+							<p class="twitter-slider__text">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac nulla semper rhoncus.
+								Nullam a odio porttitor, dictum turpis vitae, pretium ante amet. Lorem ipsum dolor sit amet,
+								consectetur adipiscing elit. Sed ut tellus ac nulla semper rhoncus. Nullam a odio porttitor,
+								dictum
+								turpis vitae, pretium ante amet.
+							</p>
+						</div>
+					</div>
+
+					<div class="twitter-slider__slide swiper-slide">
+						<div class="twitter-slider__container">
+							<div class="twitter-slider__logo">
+								<img src="img/icons/twitter.png" alt="twitter logo">
+							</div>
+							<div class="twitter-slider__title">
+								AOD New York @aod <span class="twitter-slider__title_time">/ 35 min</span>
+							</div>
+							<p class="twitter-slider__text">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac nulla semper rhoncus.
+								Nullam a odio porttitor, dictum turpis vitae, pretium ante amet.
+							</p>
+						</div>
+					</div>
+
+				</div>
+				<div class="swiper-pagination"></div>
 			</section>
 
 		</main>
@@ -147,7 +225,7 @@
 
 	</div>
 
-	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 	<script src="js/script.js"></script>
 	<script src="js/dynamicAdapt.js"></script>
 </body>
