--- a/index.html
+++ b/index.html
@@ -207,6 +207,104 @@
 				<div class="swiper-pagination"></div>
 			</section>
 
+			<section class="shop">
+
+				<div class="shop__content">
+					<a href="#" class="shop__item">
+						<span class="shop__logo">
+							<img src="img/icons/bike.png" alt="">
+							<span>Shop now</span>
+						</span>
+						<div class="shop__image ibg">
+							<img src="img/shop/01.jpg" alt="">
+						</div>
+					</a>
+					<a href="#" class="shop__item shop__item_bh">
+						<span class="shop__logo">
+							<img src="img/icons/bike.png" alt="">
+							<span>Shop now</span>
+						</span>
+						<div class="shop__image ibg">
+							<img src="img/shop/03.jpg" alt="">
+						</div>
+					</a>
+					<a href="#" class="shop__item">
+						<span class="shop__logo">
+							<img src="img/icons/bike.png" alt="">
+							<span>Shop now</span>
+						</span>
+						<div class="shop__image ibg">
+							<img src="img/shop/02.jpg" alt="">
+						</div>
+					</a>
+					<a href="#" class="shop__item shop__item_bv">
+						<span class="shop__logo">
+							<img src="img/icons/bike.png" alt="">
+							<span>Shop now</span>
+						</span>
+						<div class="shop__image ibg">
+							<img src="img/shop/04.jpg" alt="">
+						</div>
+					</a>
+					<a href="#" class="shop__item shop__item_bv">
+						<span class="shop__logo">
+							<img src="img/icons/bike.png" alt="">
+							<span>Shop now</span>
+						</span>
+						<div class="shop__image ibg">
+							<img src="img/shop/06.jpg" alt="">
+						</div>
+					</a>
+					<a href="#" class="shop__item shop__item_bh">
+						<span class="shop__logo">
+							<img src="img/icons/bike.png" alt="">
+							<span>Shop now</span>
+						</span>
+						<div class="shop__image ibg">
+							<img src="img/shop/07.jpg" alt="">
+						</div>
+					</a>
+					<a href="#" class="shop__item">
+						<span class="shop__logo">
+							<img src="img/icons/bike.png" alt="">
+							<span>Shop now</span>
+						</span>
+						<div class="shop__image ibg">
+							<img src="img/shop/08.jpg" alt="">
+						</div>
+					</a>
+					<a href="#" class="shop__item">
+						<span class="shop__logo">
+							<img src="img/icons/bike.png" alt="">
+							<span>Shop now</span>
+						</span>
+						<div class="shop__image ibg">
+							<img src="img/shop/09.jpg" alt="">
+						</div>
+					</a>
+				</div>
+				<div class="shop__bottom">
+					<a href="#" class="shop__button">
+						discover the shop
+					</a>
+				</div>
+
+			</section>
+
+			<section class="subscribe">
+				<div class="subscribe__logo">
+					<img src="img/logo.png" alt="logo">
+				</div>
+				<p class="subscribe__text">
+					Stay on the saddle!
+				</p>
+				<form action="#" class="subscribe__form">
+					<input placeholder="enter your email..." class="subscribe__input" type="text" name="email">
+					<button class="subscribe__button" type="submit">go</button>
+				</form>
+
+			</section>
+
 		</main>
 
 		<footer class="footer">
