--- a/index.html
+++ b/index.html
@@ -308,16 +308,27 @@
 		</main>
 
 		<footer class="footer">
-			<div class="footer__contacts">
-				AOD New York
-				2250 Lexington Avenue
-				New York, NY 10035 - info@domain.com
-			</div>
-			<div class="footer__social">
-
-			</div>
-			<div class="footer__sign">
-
+			<div class="footer__body">
+				<div class="footer__contacts">
+					<span>AOD New York</span>
+					<p>2250 Lexington Avenue</p>
+					<p>New York, NY 10035 - info@domain.com</p>
+				</div>
+				<ul class="footer__social social">
+					<li>
+						<a href="#" class="social__item"><img src="img/icons/social/01.png" alt="twitter"></a>
+					</li>
+					<li>
+						<a href="" class="social__item"><img src="img/icons/social/02.png" alt="facebook"></a>
+					</li>
+					<li>
+						<a href="" class="social__item"><img src="img/icons/social/03.png" alt="pentirest"></a>
+					</li>
+				</ul>
+				<div class="footer__developer">
+					<span>Handcrafted by</span>
+					<img src="img/icons/dev.png" alt="">
+				</div>
 			</div>
 		</footer>
 
