--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 		<main class="page">
 			<section class="top">
+				<h1 class="visually-hidden">Bicycle AOD</h1>
 				<div class="top__image ibg">
 					<img src="img/bg_main.jpg" alt="">
 				</div>
@@ -59,7 +60,7 @@
 			<section class="brands">
 
 				<div class="brands__row">
-					<a href="" class="brands__item brands__item_b">
+					<a href="#" class="brands__item brands__item_b">
 						<span class="brands__logo">
 							<img src="img/logos/01.png" alt="">
 						</span>
